--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ a:visited {
 }
 
 #header img {
-  width: 150px;
+  height: 60px;
   padding-bottom: 2vh;
 }
 
@@ -281,8 +281,8 @@ a:visited {
   right: 10px;
   border-radius: 3px;
   width: 200px;
-  border: 1px solid rgba(0, 0, 0, 0.4);
-  font-family: 'Open Sans', sans-serif;
+  /*border: 1px solid rgba(0, 0, 0, 0.4);*/
+  /*font-family: 'Open Sans', sans-serif;*/
 }
   
 #menu a {
@@ -317,7 +317,45 @@ a:visited {
 
 /* Popup */
 
-.mapboxgl-popup {
+/*.mapboxgl-popup {
   max-width: 400px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}*/
+
+.mapboxgl-popup-close-button {
+  display: none;
+}
+
+.mapboxgl-popup-content {
+  font: 400 15px/22px sans-serif;
+  padding: 0;
+  width: 210px;
+}
+
+.mapboxgl-popup-content h3 {
+  background: #3887be;
+  color: #fff;
+  margin: 0;
+  padding: 10px;
+  border-radius: 3px 3px 0 0;
+  font-weight: 500;
+  margin-top: -15px;
+}
+
+.mapboxgl-popup-content h4 {
+  margin: 0;
+  padding: 10px;
+  font-weight: 300;
+}
+
+.mapboxgl-popup-content div {
+  padding: 10px;
+}
+
+.mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
+  margin-top: 15px;
+}
+
+.mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
+  border-bottom-color: #3887be;
 }
