Stable photo carrousel

--- a/css/style.css
+++ b/css/style.css
@@ -378,4 +378,109 @@ a:visited {
   left: 10px;
   visibility: hidden;
 }
+
+/* Photos popup */
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 20%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+
+/* Photo slides */
+
+#photo-slides-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.photo-slides {
+  display: none
+}
   
+.photo-slides-img {
+  margin: auto;
+  display: block;
+  height: 500px;
+}
+
+.photo-slides-prev, .photo-slides-next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.photo-slides-next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* Fading animation */
+.photo-slides-fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes photo-slides-fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .photo-slides-prev, .photo-slides-next, .photo-slides-text {font-size: 11px}
+}
