--- a/css/style.css
+++ b/css/style.css
@@ -501,10 +501,14 @@ a:visited {
 
 .overlay-content {
   position: relative;
-  top: 20%;
+  top: 15%;
   width: 100%;
   text-align: center;
   margin-top: 30px;
+}
+
+#eda-popup .overlay-content {
+  top: 5%;
 }
 
 .overlay a {
@@ -522,9 +526,9 @@ a:visited {
 
 .overlay .closebtn {
   position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+  /*top: 20px;*/
+  right: 20px;
+  font-size: 50px;
 }
 
 @media screen and (max-height: 450px) {
@@ -591,16 +595,97 @@ a:visited {
   .photo-slides-prev, .photo-slides-next, .photo-slides-text {font-size: 11px}
 }
 
-/* Vega */
+/* Checkboxes */
 
-.vega-embed {
-  padding: 0px !important;
+.chk-container {
+  /*display: block;*/
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.chart-wrapper {
-  padding: 0px !important;
+/* Hide the browser's default checkbox */
+.chk-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
 
-#ch-5 {
-  width: 80vw !important;
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: -1px;
+  left: -3px;
+  height: 15px;
+  width: 15px;
+  border: 2px solid;
+  border-radius: 2px;
+}
+
+/* When the checkbox is checked, add a blue background */
+/*.chk-container input:checked ~ .checkmark {
+  background-color: firebrick;
+}*/
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.chk-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.chk-container .checkmark:after {
+  left: 5px;
+  top: 1px;
+  width: 3px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* Table */
+
+#district-table {
+  border-collapse: collapse;
+  margin: 0 auto;
+  font-size: 12px;
+}
+
+#district-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#district-table td {
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+
+#district-table tr:nth-child(even){background-color: #f2f2f2;}
+
+#district-table tr:hover {background-color: #ddd;}
+
+#district-table th {
+  padding-left: 25px;
+  padding-right: 25px;
+  text-align: center;
+  background-color: #5c5e5d;
+  color: white;
 }
